--- a/ml_pipeline_project/demo.ipynb
+++ b/ml_pipeline_project/demo.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "6bd8c12c-77fe-4377-8bbb-47830b22635f",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c4e73baa-c2f4-4124-8c92-d1fbbc7bc1a0",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "9662db3b-29eb-4f19-9fbd-68db3d9f8c19",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "1584f6ad-891b-4c99-b2a9-d9f2bcb8048a",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "088e45d3-ea0a-4ff3-822b-cfb0887be383",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "ab77a342-045f-4547-99c4-2247920d3813",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "b7317952-0f8f-430f-9570-3244004a769c",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 25ms/step\n"
+      "1/1 [==============================] - 4s 4s/step\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "d9266cab-9468-4d2f-a563-5942155be789",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "21ad6638-1427-4721-8137-653369f2a0ff",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "89f170e1-2ced-4ff1-a05e-df3176a7c27a",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 38ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
       "False\n"
      ]
     }
